@@ -1,8 +1,8 @@
 package com.alicloud.utils.jwt;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
+import java.util.Base64;
+import java.util.Base64.Encoder;
+import java.util.Base64.Decoder;
 import java.io.DataInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
@@ -146,11 +146,19 @@ public class RsaKeyHelper {
 	}
 
 	public static String toHexString(byte[] b) {
-		return (new BASE64Encoder()).encodeBuffer(b);
+		// jdk 8
+//		return (new BASE64Encoder()).encodeBuffer(b);
+		// jdk 10+
+		Encoder encoder = Base64.getEncoder();
+        return encoder.encodeToString(b);
 	}
 
 	public static final byte[] toBytes(String s) throws IOException {
-		return (new BASE64Decoder()).decodeBuffer(s);
+		// jdk 8;
+//		return (new BASE64Decoder()).decodeBuffer(s);
+		/// jdk 9+
+		Decoder decoder = Base64.getDecoder();
+        return decoder.decode(s);
 	}
 	/*
 	public static void main(String[] args) throws Exception {
